--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="8dp"
         android:inputType="numberDecimal"
-        android:hint="@string/price_hints"
+        android:hint="@string/price_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
