--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="save_menu"
+        android:id="@+id/save_menu"
         android:title="@string/save_menu"
-        app:showAsAction="always" ></item>
+        app:showAsAction="always"></item>
 
 </menu>
